--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -100,3 +100,9 @@
         text-align: left;
     }
 }
+
+@media (max-width: 400px) {
+    .empresa {
+        grid-template-columns: 1fr;
+    }
+}
