--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,6 @@ body {
   font-family: "Fira Sans", Arial, sans-serif;
   margin: 0px;
   color: #141414;
-  margin-bottom: 1000px;
 }
 
 h1,
@@ -36,5 +35,9 @@ img {
     font-size: 3rem;
     text-transform: capitalize;
     max-width: initial !important;
+  }
+  .formacao-extra h3::before {
+    position: initial;
+    margin-bottom: 10px;
   }
 }
