--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -17,6 +17,7 @@
     max-width: 40ch;
     margin-bottom: 60px;
     color: #525252;
+    text-align: justify;
 }
 
 .experiencia-texto strong {
@@ -65,6 +66,7 @@
     font-size: 0.875rem;
     line-height: 1.4;
     color: #525252;
+    text-align: justify;
 }
 
 .empresa-habilidades {
