--- a/css/footer.css
+++ b/css/footer.css
@@ -39,29 +39,33 @@
     color: #8f8f8f;
 }
 
-.email {
-    margin-left: -63px;
-    padding: 3px 10px;
-    margin-top: -10px;
-    width: 50px;
-    height: 50px;
-
-}
-
 .linkedin {
     margin-left: -63px;
     margin-top: -10px;
     padding: 3px 10px;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 70px;
 }
 
 .instagram {
     margin-top: -10px;
     padding: 3px 10px;
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 70px;
     margin-left: -60px;
+}
+
+.github {
+        margin-top: -10px;
+        padding: 3px 10px;
+        width: 80px;
+        height: 70px;
+        margin-left: -60px;
+}
+
+.link:hover {
+    text-decoration: underline;
+    color: blue;
 }
 
 @media (max-width: 800px) {
